Fix #898: Review Java warnings (#899)
* Fix Javadoc
* Add @Serial annotation to serialVersionUID
* Simplify Optional call chain
* Simplify Stream call chain
* Replace explicit type argument by diamond operator <>
* Use requireNonNullElse
* Enhance switch statements
* Use pattern variable for instanceof
* Convert classes to records